--- a/estore-ui/src/app/features/browse-catalog/product-details/product-details.component.html
+++ b/estore-ui/src/app/features/browse-catalog/product-details/product-details.component.html
@@ -1,39 +1,30 @@
-
 <div class="product-container">
-
   <div class="product-image">
-    <img src={{image}} alt="Product Image">
-  </div> 
-  <div class="product-details"> 
-
-    <h1 class="product-title">Name goes here <span class="product-sku">SKU: {{sku}}</span></h1>
-
-    <label class="stock-label">
+    <img [src]="image" alt="Product Image">
+  </div>
+  <div class="product-details">
+    <h1 class="product-title">{{ name }} <span class="product-sku">SKU: {{ sku }}</span></h1>
+    <div class="stock-label">
       <mat-icon class="status-icon" [ngClass]="{
         'green': stockStatus==='In Stock',
         'orange': stockStatus==='Low Stock', 
         'red': stockStatus==='Out Of Stock'}"
         ></mat-icon>
-      {{stockStatus}}
-    </label>
-    <div class="add-to-cart-container">
-      <p style="font-size: 1.2rem; margin: 0;" >$<span style="display: inline; padding-left: 2px; margin-top: 0;" class="price">{{ price }}</span></p>
-
-      <button class ="add-to-cart-btn" mat-raised-button color="primary">Add to Cart</button>
+      {{ stockStatus }}
     </div>
     <div class="stars-container">
-      <i class="star-icon fas fa-star"></i>
-      <i class="star-icon fas fa-star"></i>
-      <i class="star-icon fas fa-star"></i>
-      <i class="star-icon fas fa-star"></i>
-      <i class="star-icon far fa-star"></i>
+      <ng-container *ngFor="let i of [1, 2, 3, 4, 5]">
+        <mat-icon class="star-icon" color="accent">star</mat-icon>
+      </ng-container>
+      <span class="reviews">10</span>
+    </div>
+    <div class="price-container">
+      <div style="font-size: 1.2rem;">$<span class="price">{{ price }}</span></div>
+      <button mat-raised-button color="primary" class="add-to-cart-button">Add to Cart</button>
+    </div>
+    <div class="description-container">
+      <p class="description-summary">{{ summary }}</p>
+      <p class="description-tags">Tags: <span *ngFor="let tag of tags; let isLast = last">{{ tag }}{{ isLast ? '' : ', ' }}</span></p>
     </div>
   </div>
-</div>
-<div class="description-container">
-
-  <p class="description-summary">{{summary}}</p>
-  <p class="description-tags">Tags: 
-    <span *ngFor="let tag of tags; let isLast = last">{{tag}}{{isLast ? '' : ', '}}</span>
-  </p>
 </div>
