disabled add to cart button for out of stock product

--- a/estore-ui/src/app/features/browse-catalog/product-details/product-details.component.html
+++ b/estore-ui/src/app/features/browse-catalog/product-details/product-details.component.html
@@ -25,6 +25,7 @@
         color="primary"
         class="add-to-cart-button"
         (click)="addToCart(sku)"
+        [disabled]="stockStatus==='Out Of Stock'"
       >
         Add to Cart
       </button>
