--- a/estore-ui/src/app/features/order-processing/checkout/checkout.component.scss
+++ b/estore-ui/src/app/features/order-processing/checkout/checkout.component.scss
@@ -14,6 +14,16 @@
   background-color: #ebebeb; // lightgrey
 }
 
+.summary-item {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+
+.total {
+  font-weight: bold;
+}
+
 .mat-form-field {
   width: 100%;
   margin-bottom: 1rem;
@@ -79,4 +89,12 @@
   .container {
     max-width: 80%;
   }
+}
+
+.confirmation-message {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
