--- a/estore-ui/src/app/features/browse-catalog/product-details/product-details.component.html
+++ b/estore-ui/src/app/features/browse-catalog/product-details/product-details.component.html
@@ -34,5 +34,9 @@
       <p class="description-summary">{{ summary }}</p>
       <p class="description-tags">Tags: <span *ngFor="let tag of tags; let isLast = last">{{ tag }}{{ isLast ? '' : ', ' }}</span></p>
     </div>
+    <div *ngIf="!(authService.getIsAdmin() | async)> <!-- If the product has been ordered by the user-->
+      <app-review-form>
+      </app-review-form> 
+    </div>
   </div>
 </div>
