fix changes to comment

--- a/estore-ui/src/app/features/reviews/review-card-component/review-card-component.component.html
+++ b/estore-ui/src/app/features/reviews/review-card-component/review-card-component.component.html
@@ -10,6 +10,6 @@
       </div>
       <div class="card-content Comment">
     </mat-card-header>
-    <mat-card-content>{{ Comment }}</mat-card-content>
+    <mat-card-content>{{ comment }}</mat-card-content>
     </div>
   </mat-card>
