--- a/estore-ui/src/app/features/reviews/review-card-component/review-card-component.component.css
+++ b/estore-ui/src/app/features/reviews/review-card-component/review-card-component.component.css
@@ -30,3 +30,16 @@
   justify-content: flex-end;
   padding-right: 2rem;
 }
+
+.stars-container {
+  padding-top: 4px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: left;
+}
+
+.stars-container .star-icon {
+  font-size: 1rem;
+  margin-right: -0.5rem;
+}
