Removed showForm boolean

--- a/estore-ui/src/app/features/browse-catalog/product-details/product-details.component.html
+++ b/estore-ui/src/app/features/browse-catalog/product-details/product-details.component.html
@@ -38,7 +38,7 @@
 </div>
 
 <div>
-    <app-review-form  *ngIf="(authService.getIsAdmin() | async) || (authService.getIsLoggedIn() | async) || (this.reviewForm.showForm)"/>
+    <app-review-form  *ngIf="(authService.getIsAdmin() | async) || (authService.getIsLoggedIn() | async)"/>
 </div>
 
 <div>
