Changes to hreview card component

--- a/estore-ui/src/app/features/reviews/review-card-component/review-card-component.component.css
+++ b/estore-ui/src/app/features/reviews/review-card-component/review-card-component.component.css
@@ -1,19 +1,27 @@
+/* * {
+  padding: 0%;
+  margin: 0px;
+}
+
 .card {
-  position: relative;
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
 }
 
 .card .mat-card-header {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
 .card .card-content {
   display: flex;
   flex-direction: column;
   flex-grow: 1;
+  align-self: flex-start;
+  margin: 0px;
+  padding: 0px;
 }
 
 .close-button {
@@ -26,20 +34,77 @@
 
 .review {
   display: flex;
+  margin-top: 0.5rem;
   align-items: center;
   justify-content: flex-end;
   padding-right: 2rem;
 }
 
 .stars-container {
-  padding-top: 4px;
+  padding-top: 0;
+  padding-bottom: 0;
+  margin-bottom: 0;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: left;
+  width: 100%;
+}
+
+.comment {
+  padding-top: 0em;
+  margin-top: 0em;
+  text-align: left;
 }
 
 .stars-container .star-icon {
   font-size: 1rem;
   margin-right: -0.5rem;
+  padding-bottom: 0px;
+  margin-bottom: 0px;
+}
+.container {
+  display: flex;
+  align-items: center;
+  height: 300px; /* Set a height to the container so that you can see the effect */
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.card {
+  width: 200px;
+  margin: 20px;
+}
+
+.card-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.stars-container {
+  display: flex;
+  padding-bottom: 7px;
+}
+
+.star-icon {
+  font-size: 20px;
+}
+
+.review {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: -30px;
+}
+
+.close-button {
+  margin-right: 5px;
+}
+
+.comment {
+  margin-top: 40px;
+  padding-top: 2em;
 }
