--- a/estore-ui/src/app/features/reviews/review-form/review-form.component.css
+++ b/estore-ui/src/app/features/reviews/review-form/review-form.component.css
@@ -11,10 +11,12 @@ form {
   display: flex;
   flex-direction: column;
   align-items: center;
+  
 }
 
 button {
   margin: 10px;
+  align-self: center;
 }
 
 textarea {
