--- a/estore-ui/src/app/features/reviews/review-form/review-form.component.html
+++ b/estore-ui/src/app/features/reviews/review-form/review-form.component.html
@@ -3,9 +3,9 @@
     <form [formGroup]="reviewForm" (ngSubmit)="create()">
         <div class="form-group">
             <button mat-icon-button [color]="color" *ngFor="let ratingId of stars; index as i" [id]="'star_'+i"
-                (click)="onClick(i)" [matTooltip]="(ratingId+1).toString()" matTooltipPosition="above">
+                (click)="onClick(i+1)" [matTooltip]="(ratingId).toString()" matTooltipPosition="above">
                 <mat-icon>
-                    {{showIcon(i)}}
+                    {{showIcon(i+1)}}
                 </mat-icon>
             </button>
             <mat-error *ngIf="starCount == null || starCount == 0">
