--- a/estore-ui/src/app/features/reviews/review-card-component/review-card-component.component.html
+++ b/estore-ui/src/app/features/reviews/review-card-component/review-card-component.component.html
@@ -13,7 +13,7 @@
     </mat-card-header>
     <div class="review">
       <button
-        *ngIf="canRemove()"
+        *ngIf="canRemove() | async"
         mat-icon-button
         color="warn"
         class="close-button"
