commented out messages

--- a/estore-ui/src/app/app.component.html
+++ b/estore-ui/src/app/app.component.html
@@ -6,7 +6,7 @@
       </mat-sidenav>
       <mat-sidenav-content class="flex-fill">
           <router-outlet />
-          <app-messages />
+          <!-- <app-messages /> -->
       </mat-sidenav-content>
   </mat-sidenav-container>
   
